# neon-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
examples/: xor_example.cpp
include/neon/: neon.h  server.h
include/neon/core/: activations.h  tensor.h
include/neon/layers/: layers.h
include/neon/loss/: loss.h
include/neon/optimizers/: optimizers.h
src/: server_main.cpp
tests/: test_tensor.cpp
web_gui/: index.html
